identifiers-uri/tests/ui/uri_bad_allowed_values.stderr
error: expected `all`
 --> tests/ui/uri_bad_allowed_values.rs:5:18
  |
5 | #[allowed_values(typo)]
  |                  ^^^^
